trunk/Archive2/ce/52a0f2067d1a9e/output
+ clang++ -std=c++11 -O2 -pthread main.cpp
main.cpp:6:19: error: cannot pass non-trivial object of type 'std::string' (aka 'basic_string<char>') to variadic function; expected type from format string was 'char *' [-Wnon-pod-varargs]
std::printf("%s", hello);}
             ~~   ^~~~~
main.cpp:6:19: note: did you mean to call the c_str() method?
std::printf("%s", hello);}
                  ^
                       .c_str()
1 error generated.
