trunk/Archive2/ce/52a0f2067d1a9e/main.cpp
#include <cstdio>  
#include<string>     

int main(){
std::string hello = "hello";
std::printf("%s", hello);}
